--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,23 @@
   </head>
 
   <body>
+    <header>
+        <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">PabloWebSite</a>
+          </div>
+          <ul class="nav navbar-nav">
+            
+            <li><%= link_to 'one', pages_one_path %></li>
+            <li><%= link_to 'two', pages_two_path %></li>
+            <li><%= link_to 'three', pages_three_path %></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+
     <%= yield %>
   </body>
 </html>
